EDA and Python code in RStudio

--- a/muzammil_ds_course_data.Rmd
+++ b/muzammil_ds_course_data.Rmd
@@ -20,12 +20,33 @@ library(tidyverse)
 ds_course_data = read.csv("Data/Data - DS C1 Course.csv")
 ```
 
-## Including Plots
+## Exploratory Data Analysis (EDA)
 
-You can also embed plots, for example:
+```{r EDA, echo=FALSE}
 
-```{r pressure, echo=FALSE}
-plot(pressure)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+## Running Python in R
+
+We will demonstrate how python will run in RStudio
+
+```{r}
+library("reticulate")
+```
+
+```{python}
+
+# import pandas as pd
+# import numpy as np
+
+
+```
+
+
+```{python}
+
+for i in range(10):
+  print (i)
+  
+```
+
