--- a/Abdus_Flexdashboard.Rmd
+++ b/Abdus_Flexdashboard.Rmd
@@ -9,7 +9,8 @@ output:
 ```{r setup, include=FALSE}
 library(flexdashboard)
 library(tidyverse)
-
+library(knitr)
+library(kableExtra)
 ```
 
 Column
@@ -54,12 +55,12 @@ Column
 dfRaw %>% colnames()
 
 ```
-
+# Statistics
 
 
 ```{r}
 
-dfRaw %>% group_by(Payment) %>% count()
+dfRaw %>% group_by(Gender, Payment) %>% count() %>% kable()
 
 ```
 
